[gd_scene load_steps=4 format=3 uid="uid://csw03c43y2rk"]

[ext_resource type="Texture2D" uid="uid://bh8olm1yyfedr" path="res://Assets/horse.png" id="1_53x8q"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_675ep"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ycxst"]
radius = 40.0
height = 122.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(1, 0)
collision_mask = 6
script = ExtResource("1_675ep")

[node name="Hors" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_53x8q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 18)
shape = SubResource("CapsuleShape2D_ycxst")

[node name="LazerStartPos" type="Marker2D" parent="."]
position = Vector2(0, -75)

[node name="LazerTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="LazerTimer" to="." method="_on_lazer_timer_timeout"]
